<resources>
    <string name="app_name">PopMovies</string>
    <string name="action_settings">Settings</string>
    <string name="most_popular">Most Popular Movies</string>
    <string name="highest_rated">Highest Rated Movies</string>
    <string name="highest_revenue">Highest Revenue Movies</string>
    <string name="favorites">Favorite Movies</string>
    <string name="overview">Summary</string>
    <string name="sort_most_popular">Most Popular</string>
    <string name="sort_highest_rated">Highest Rated</string>
    <string name="sort_highest_revenue">Highest Revenue</string>
    <string name="sort_favorite">Favorites</string>

    <string name="content_authority">com.example.walidelshafai.udacity_google_mcit_popmoviesapp</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="action_share">Share</string>
    <string name="character">Character</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="running_time">Running Time</string>
    <string name="rating">Rating</string>
    <string name="cast">Cast</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
</resources>
