<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/detail_img_backdrop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:scaleType="centerCrop"
                />
            <ToggleButton
                android:id="@+id/detail_tog_fav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                style="@style/toggleButton"
                android:background="@drawable/ic_toggle_bg"
                android:layout_alignBottom="@id/detail_img_backdrop"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="-20dp"
                android:layout_marginRight="15dp"
                />
            <TextView
                android:id="@+id/detail_txt_tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="25dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/magenta"
                android:textStyle="italic"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                />
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_below="@id/detail_img_backdrop"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="-15dp"
                >
                <ImageView
                    android:id="@+id/detail_img_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="175dp"
                    android:minHeight="150dp"
                    />
            </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/detail_txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_toRightOf="@id/card_view"
                android:layout_below="@id/detail_img_backdrop"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                />
            <LinearLayout
                android:id="@+id/detail_lin_genre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/card_view"
                android:layout_below="@id/detail_txt_title"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                >
                <ImageView
                    android:id="@+id/detail_img_genre"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/cinema"
                    />
                <TextView
                    android:id="@+id/detail_txt_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:layout_marginLeft="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/detail_lin_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/card_view"
                android:layout_below="@id/detail_lin_genre"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                >
                <ImageView
                    android:id="@+id/detail_img_date"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/calendar"
                    />
                <TextView
                    android:id="@+id/detail_txt_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:layout_marginLeft="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/detail_lin_duration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/card_view"
                android:layout_below="@id/detail_lin_date"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                >
                <ImageView
                    android:id="@+id/detail_img_"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/clock"
                    />
                <TextView
                    android:id="@+id/detail_txt_running_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/running_time"
                    android:layout_marginLeft="5dp"
                    />
            </LinearLayout>
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/detail_txt_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                style="@style/Base.TextAppearance.AppCompat.Large"
                />
            <RatingBar
                android:id="@+id/detail_rat_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="10"
                android:isIndicator="true"
                style="?android:attr/ratingBarStyleSmall"
                android:clickable="false"
                android:paddingTop="3dp"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/detail_txt_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cast"
                style="@style/Base.TextAppearance.AppCompat.Large"
                />
            <HorizontalScrollView
                android:id="@+id/detail_hsv_cast"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="75dp"
                >
                <LinearLayout
                    android:id="@+id/detail_lin_cast"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                </LinearLayout>
            </HorizontalScrollView>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:layout_marginTop="5dp"
                style="@style/Base.TextAppearance.AppCompat.Large"
                />
            <TextView
                android:id="@+id/detail_txt_overview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:paddingBottom="30dp"
                />
            <LinearLayout
                android:id="@+id/detail_master_lin_trail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:id="@+id/detail_txt_trailers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    />
                <HorizontalScrollView
                    android:id="@+id/detail_hsv_trailers"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="75dp"
                    >
                    <LinearLayout
                        android:id="@+id/detail_lin_trailers"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/detail_master_lin_rev"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp" />
                <TextView
                    android:id="@+id/detail_txt_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    />
                <LinearLayout
                    android:id="@+id/detail_lin_reviews"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>